# vocab-assistant

./: .gitignore  pyproject.toml
app/: main.py  pipeline.py
app/llm/: define_word.py
app/models/: vocabulary_entry.py
app/speech/: record_audio.py  transcribe_audio.py
app/storage/: json_storage.py  test_save.py
app/ui/: desktop_app.py
