[project]
name = "vocabulary-assistant"
version = "0.1.0"
description = "AI assistant to collect and review new vocabulary while reading"
authors = [
    {name = "Mohamed Bouabdallah"}
]
license = "MIT"
requires-python = "^3.12"
dependencies = [
    "speechrecognition (>=3.17.0,<4.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "soundfile (>=0.14.0,<0.15.0)",
    "numpy (>=2.5.0,<3.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
